FormLang/src/parser.output
State 14 conflicts: 1 shift/reduce


Grammar

    0 $accept: form $end

    1 $@1: ε

    2 form: FORM IDENTIFIER $@1 '{' section_list '}'

    3 section_list: ε
    4             | section_list section

    5 section: section_header '{' field_list '}'
    6        | section_header '{' '}'
    7        | section_header error '}'

    8 section_header: SECTION IDENTIFIER

    9 field_list: ε
   10           | field_list field
   11           | field_list error ';'

   12 field: FIELD IDENTIFIER ':' field_type field_attributes ';'

   13 field_type: TEXT
   14           | EMAIL
   15           | PASSWORD
   16           | NUMBER
   17           | TEXTAREA
   18           | DATE
   19           | CHECKBOX
   20           | DROPDOWN
   21           | RADIO
   22           | FILE_TYPE

   23 field_attributes: ε
   24                 | field_attributes attribute

   25 attribute: REQUIRED
   26          | OPTIONAL
   27          | PATTERN STRING_LITERAL
   28          | DEFAULT STRING_LITERAL
   29          | DEFAULT NUMBER_LITERAL
   30          | MINLENGTH NUMBER_LITERAL
   31          | MAXLENGTH NUMBER_LITERAL
   32          | MIN NUMBER_LITERAL
   33          | MAX NUMBER_LITERAL
   34          | ROWS NUMBER_LITERAL
   35          | COLS NUMBER_LITERAL


Terminals, with rules where they appear

    $end (0) 0
    ':' (58) 12
    ';' (59) 11 12
    '{' (123) 2 5 6
    '}' (125) 2 5 6 7
    error (256) 7 11
    FORM (258) 2
    SECTION (259) 8
    FIELD (260) 12
    TEXT (261) 13
    EMAIL (262) 14
    PASSWORD (263) 15
    NUMBER (264) 16
    TEXTAREA (265) 17
    DATE (266) 18
    CHECKBOX (267) 19
    DROPDOWN (268) 20
    RADIO (269) 21
    FILE_TYPE (270) 22
    REQUIRED (271) 25
    OPTIONAL (272) 26
    MINLENGTH (273) 30
    MAXLENGTH (274) 31
    MIN (275) 32
    MAX (276) 33
    ROWS (277) 34
    COLS (278) 35
    PATTERN (279) 27
    DEFAULT (280) 28 29
    IDENTIFIER <str> (281) 2 8 12
    NUMBER_LITERAL <num> (282) 29 30 31 32 33 34 35
    STRING_LITERAL <str> (283) 27 28


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    form <form> (34)
        on left: 2
        on right: 0
    $@1 (35)
        on left: 1
        on right: 2
    section_list (36)
        on left: 3 4
        on right: 2 4
    section (37)
        on left: 5 6 7
        on right: 4
    section_header (38)
        on left: 8
        on right: 5 6 7
    field_list (39)
        on left: 9 10 11
        on right: 5 10 11
    field (40)
        on left: 12
        on right: 10
    field_type <field_type> (41)
        on left: 13 14 15 16 17 18 19 20 21 22
        on right: 12
    field_attributes <field_attrs> (42)
        on left: 23 24
        on right: 12 24
    attribute <field_attrs> (43)
        on left: 25 26 27 28 29 30 31 32 33 34 35
        on right: 24


State 0

    0 $accept: • form $end

    FORM  shift, and go to state 1

    form  go to state 2


State 1

    2 form: FORM • IDENTIFIER $@1 '{' section_list '}'

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: form • $end

    $end  shift, and go to state 4


State 3

    2 form: FORM IDENTIFIER • $@1 '{' section_list '}'

    $default  reduce using rule 1 ($@1)

    $@1  go to state 5


State 4

    0 $accept: form $end •

    $default  accept


State 5

    2 form: FORM IDENTIFIER $@1 • '{' section_list '}'

    '{'  shift, and go to state 6


State 6

    2 form: FORM IDENTIFIER $@1 '{' • section_list '}'

    $default  reduce using rule 3 (section_list)

    section_list  go to state 7


State 7

    2 form: FORM IDENTIFIER $@1 '{' section_list • '}'
    4 section_list: section_list • section

    SECTION  shift, and go to state 8
    '}'      shift, and go to state 9

    section         go to state 10
    section_header  go to state 11


State 8

    8 section_header: SECTION • IDENTIFIER

    IDENTIFIER  shift, and go to state 12


State 9

    2 form: FORM IDENTIFIER $@1 '{' section_list '}' •

    $default  reduce using rule 2 (form)


State 10

    4 section_list: section_list section •

    $default  reduce using rule 4 (section_list)


State 11

    5 section: section_header • '{' field_list '}'
    6        | section_header • '{' '}'
    7        | section_header • error '}'

    error  shift, and go to state 13
    '{'    shift, and go to state 14


State 12

    8 section_header: SECTION IDENTIFIER •

    $default  reduce using rule 8 (section_header)


State 13

    7 section: section_header error • '}'

    '}'  shift, and go to state 15


State 14

    5 section: section_header '{' • field_list '}'
    6        | section_header '{' • '}'

    '}'  shift, and go to state 16

    '}'       [reduce using rule 9 (field_list)]
    $default  reduce using rule 9 (field_list)

    field_list  go to state 17


State 15

    7 section: section_header error '}' •

    $default  reduce using rule 7 (section)


State 16

    6 section: section_header '{' '}' •

    $default  reduce using rule 6 (section)


State 17

    5 section: section_header '{' field_list • '}'
   10 field_list: field_list • field
   11           | field_list • error ';'

    error  shift, and go to state 18
    FIELD  shift, and go to state 19
    '}'    shift, and go to state 20

    field  go to state 21


State 18

   11 field_list: field_list error • ';'

    ';'  shift, and go to state 22


State 19

   12 field: FIELD • IDENTIFIER ':' field_type field_attributes ';'

    IDENTIFIER  shift, and go to state 23


State 20

    5 section: section_header '{' field_list '}' •

    $default  reduce using rule 5 (section)


State 21

   10 field_list: field_list field •

    $default  reduce using rule 10 (field_list)


State 22

   11 field_list: field_list error ';' •

    $default  reduce using rule 11 (field_list)


State 23

   12 field: FIELD IDENTIFIER • ':' field_type field_attributes ';'

    ':'  shift, and go to state 24


State 24

   12 field: FIELD IDENTIFIER ':' • field_type field_attributes ';'

    TEXT       shift, and go to state 25
    EMAIL      shift, and go to state 26
    PASSWORD   shift, and go to state 27
    NUMBER     shift, and go to state 28
    TEXTAREA   shift, and go to state 29
    DATE       shift, and go to state 30
    CHECKBOX   shift, and go to state 31
    DROPDOWN   shift, and go to state 32
    RADIO      shift, and go to state 33
    FILE_TYPE  shift, and go to state 34

    field_type  go to state 35


State 25

   13 field_type: TEXT •

    $default  reduce using rule 13 (field_type)


State 26

   14 field_type: EMAIL •

    $default  reduce using rule 14 (field_type)


State 27

   15 field_type: PASSWORD •

    $default  reduce using rule 15 (field_type)


State 28

   16 field_type: NUMBER •

    $default  reduce using rule 16 (field_type)


State 29

   17 field_type: TEXTAREA •

    $default  reduce using rule 17 (field_type)


State 30

   18 field_type: DATE •

    $default  reduce using rule 18 (field_type)


State 31

   19 field_type: CHECKBOX •

    $default  reduce using rule 19 (field_type)


State 32

   20 field_type: DROPDOWN •

    $default  reduce using rule 20 (field_type)


State 33

   21 field_type: RADIO •

    $default  reduce using rule 21 (field_type)


State 34

   22 field_type: FILE_TYPE •

    $default  reduce using rule 22 (field_type)


State 35

   12 field: FIELD IDENTIFIER ':' field_type • field_attributes ';'

    $default  reduce using rule 23 (field_attributes)

    field_attributes  go to state 36


State 36

   12 field: FIELD IDENTIFIER ':' field_type field_attributes • ';'
   24 field_attributes: field_attributes • attribute

    REQUIRED   shift, and go to state 37
    OPTIONAL   shift, and go to state 38
    MINLENGTH  shift, and go to state 39
    MAXLENGTH  shift, and go to state 40
    MIN        shift, and go to state 41
    MAX        shift, and go to state 42
    ROWS       shift, and go to state 43
    COLS       shift, and go to state 44
    PATTERN    shift, and go to state 45
    DEFAULT    shift, and go to state 46
    ';'        shift, and go to state 47

    attribute  go to state 48


State 37

   25 attribute: REQUIRED •

    $default  reduce using rule 25 (attribute)


State 38

   26 attribute: OPTIONAL •

    $default  reduce using rule 26 (attribute)


State 39

   30 attribute: MINLENGTH • NUMBER_LITERAL

    NUMBER_LITERAL  shift, and go to state 49


State 40

   31 attribute: MAXLENGTH • NUMBER_LITERAL

    NUMBER_LITERAL  shift, and go to state 50


State 41

   32 attribute: MIN • NUMBER_LITERAL

    NUMBER_LITERAL  shift, and go to state 51


State 42

   33 attribute: MAX • NUMBER_LITERAL

    NUMBER_LITERAL  shift, and go to state 52


State 43

   34 attribute: ROWS • NUMBER_LITERAL

    NUMBER_LITERAL  shift, and go to state 53


State 44

   35 attribute: COLS • NUMBER_LITERAL

    NUMBER_LITERAL  shift, and go to state 54


State 45

   27 attribute: PATTERN • STRING_LITERAL

    STRING_LITERAL  shift, and go to state 55


State 46

   28 attribute: DEFAULT • STRING_LITERAL
   29          | DEFAULT • NUMBER_LITERAL

    NUMBER_LITERAL  shift, and go to state 56
    STRING_LITERAL  shift, and go to state 57


State 47

   12 field: FIELD IDENTIFIER ':' field_type field_attributes ';' •

    $default  reduce using rule 12 (field)


State 48

   24 field_attributes: field_attributes attribute •

    $default  reduce using rule 24 (field_attributes)


State 49

   30 attribute: MINLENGTH NUMBER_LITERAL •

    $default  reduce using rule 30 (attribute)


State 50

   31 attribute: MAXLENGTH NUMBER_LITERAL •

    $default  reduce using rule 31 (attribute)


State 51

   32 attribute: MIN NUMBER_LITERAL •

    $default  reduce using rule 32 (attribute)


State 52

   33 attribute: MAX NUMBER_LITERAL •

    $default  reduce using rule 33 (attribute)


State 53

   34 attribute: ROWS NUMBER_LITERAL •

    $default  reduce using rule 34 (attribute)


State 54

   35 attribute: COLS NUMBER_LITERAL •

    $default  reduce using rule 35 (attribute)


State 55

   27 attribute: PATTERN STRING_LITERAL •

    $default  reduce using rule 27 (attribute)


State 56

   29 attribute: DEFAULT NUMBER_LITERAL •

    $default  reduce using rule 29 (attribute)


State 57

   28 attribute: DEFAULT STRING_LITERAL •

    $default  reduce using rule 28 (attribute)
